tests/src/Loader/classloader/generics/Instantiation/Negative/param05.fact.cs
using CoreclrTestLib;
using Xunit;

namespace Loader_classloader
{
    class _generics_Instantiation_Negative_param05_param05_
    {
        [OuterLoop]
        [Fact]
        public void _generics_Instantiation_Negative_param05_param05_cmd()
        {
            int rv = CoreClrTestWrapperLib.RunTest("Loader\\classloader\\generics\\Instantiation\\Negative\\param05\\param05.cmd");
            Assert.Equal(rv, CoreClrTestWrapperLib.EXIT_SUCCESS_CODE);
        }
    }
}
